--- a/L1_HTML.html
+++ b/L1_HTML.html
@@ -9,9 +9,8 @@
         <div id="subBody">
             <h1>Пошук дотичної заданої функції, в точці заданій користувачем.</h1>
             <input type="text" id="func_s" placeholder="Введіть функцію:">
-            
             <input type="number" id="point_n" placeholder="Введіть точку дотику:">
-            <button onclick="rewriteValue()">Надіслати</button>
+            <button onclick="returnValue()">Надіслати</button>
         </div>
     </body>
 </html>
